// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for width: basic 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  min-width: 0;
  padding: 0 max(22px, 10.625vw - 12px);
}
@media(min-width:760px) {
  .root {
    padding: 0 calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2);
  }
}

@media(min-width:1920px) {
  .root {
    padding: 0 calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2);
  }
}
"
`;

exports[`getComponentCss() should return correct css for width: extended 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  min-width: 0;
  padding: 0 max(22px, 10.625vw - 12px);
}
@media(min-width:760px) {
  .root {
    padding: 0 calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1);
  }
}

@media(min-width:1920px) {
  .root {
    padding: 0 calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1);
  }
}
"
`;

exports[`getComponentCss() should return correct css for width: fluid 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  min-width: 0;
  padding: 0 max(0px, 50vw - 2560px / 2);
}"
`;

exports[`getComponentCss() should return correct css for width: full 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  min-width: 0;
  padding: 0 max(0px, 50vw - 2560px / 2);
}"
`;

exports[`getComponentCss() should return correct css for width: narrow 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  min-width: 0;
  padding: 0 max(22px, 10.625vw - 12px);
}
@media(min-width:760px) {
  .root {
    padding: 0 calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4);
  }
}

@media(min-width:1920px) {
  .root {
    padding: 0 calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4);
  }
}
"
`;
